# time-reminder

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AlarmItem.vue  CustomSelect.vue  CustomTitleBar.vue  TimePicker.vue
