[package]
name = "water-reminder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "water_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
